# merlin_mockup

./: .gitignore  .ocamlformat  DESIGN.md  LICENSE.md  README.md  dune-project  launch.sh  merlin-mockup.opam  merlin_mockup.opam
lib/: debug.ml  dune  merlin_mockup.ml  modomain_msg.ml  mopipeline.ml  mopipeline.mli  moquery_commands.ml  moshared.ml  moshared.mli  motool_parser.ml  motool_parser.mli  motyper.ml  server.ml  server.mli  shared.ml  utils.ml
ox/: dune  main.ml  moconfig.ml  moparser_wrapper.ml  moparser_wrapper.mli  mopipeline.ml  mopipeline.mli  motyper.ml  motyper.mli  msg.ml  server.ml  shared.ml  shared.mli
parser/: dune  moparser.ml  moparser.mli
report/: REPORT.md  blogpost.md  dune  hermes_example.ml  vendored_code_example.ml  vendored_code_example2.ml
server/: dune  server.ml
src/: debug.ml  dune  hermes.ml  hermes.mli  log.ml  log.mli  merlin_mockup.ml  moconfig.ml  moconfig.mli  moparser_wrapper.ml  moparser_wrapper.mli  mopipeline.ml  mopipeline.mli  moquery_commands.ml  moquery_commands.mli  moshared.ml  motool_parser.ml  motool_parser.mli  motyper.ml  motyper.mli  msg.mli  server.ml  server.mli  utils.ml
test/: test1
tests/: dune  run_test.sh  test.t  test_cache.t  test_cancel.t  test_partial.t
tests/defs/: fruits  space
