(lang dune 3.0)

(name merlin_mockup)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Carine Morel")

(maintainers "Carine Morel")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name merlin_mockup)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
