(executable
 (name hermes_example)
 (libraries await basement parallel parallel.scheduler))

; (executable
;  (name test_compat)
;  (libraries await await.blocking await.sync capsule))

; (executable
;  (name report_example)
;  (libraries await await.blocking await.sync capsule))

(executable
 (name vendored_code_example)
 (libraries await basement parallel parallel.scheduler))

(executable
 (name vendored_code_example2)
 (libraries await basement parallel parallel.scheduler))
